# noprophet

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
noprophet/: __init__.py
notebooks/: main.py
